--- a/app/composer.json
+++ b/app/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "php": ">=8.1",
         "bissolli/validador-cpf-cnpj": "^1.2",
+        "gokure/hyperf-cors": "^2.1",
         "hyperf/cache": "~3.1.0",
         "hyperf/command": "~3.1.0",
         "hyperf/config": "~3.1.0",
@@ -76,5 +77,11 @@
             "Composer\\Config::disableProcessTimeout",
             "php ./bin/hyperf.php start"
         ]
+    },
+    "repositories": {
+        "packagist": {
+            "type": "composer",
+            "url": "https://repo.packagist.org"
+        }
     }
 }
