--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "axios": "^1.10.0",
+    "cpf-cnpj-validator": "^1.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^6.30.1"
+    "react-router-dom": "^6.30.1",
+    "remask": "^1.2.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
